style: css added

--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Birthday Palindrome</title>
+    <link href="./style.css" rel="stylesheet"/>
 </head>
 <body>
-     <h1>IS YOUR BIRTHDATE A PALINDROME??</h1>
+     <h1>IS YOUR BIRTHDATE A PALINDROME 🎂??</h1><br/>
+
+     <p>Enter your birthdate and it will show you whether it is a palindrome or not. If it is not then you will get the nearest palindomre date and the number of days you missed.</p>
      <label>Enter your birthdate: <input type= "date" id ="bdy-input"></label>
+     <br/> <br/>
      
-     <button id ="btn">check</button>
+     <button id ="btn">CHECK</button> <br/>
      <p id ="output"></p>
+     <br/>   
+     <hr/>
     
+     <footer>
+        CONNECT ME ON SOCIAL MEDIA:<br/>
+        <a href="https://github.com/sanskritisp">Github </a> 
+        <a href="https://www.linkedin.com/in/sanskriti-pandey-967166217">Linkedin </a>
+        <a href="https://sansportfolio.netlify.app/">My Portfolio</a>
+    </footer>
+
 
 
 
